force-app/main/default/objects/Data_Feedback_Loop__c/Data_Feedback_Loop__c.object-meta.xml
<CustomObject>
    <label>Data Feedback Loop</label>
    <nameField>
        <displayFormat>DFL-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Feedback Loops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>