force-app/main/default/objects/Data_Feedback_Loop__c/fields/Account_Manager_this_account_relate_to__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_this_account_relate_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please tell me the Sales Manager you believe this account belongs to</inlineHelpText>
    <label>Account Manager this account relate to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Feedback_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>