force-app/main/default/objects/Data_Feedback_Loop__c/fields/Extra_information__c.field-meta.xml
<CustomField>
    <fullName>Extra_information__c</fullName>
    <inlineHelpText>Please tell me anything else you think will be useful in resolving this issue (the more you are able to give, the easier and quicker the issue will be resolved)</inlineHelpText>
    <label>Extra information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>