force-app/main/default/objects/Data_Feedback_Loop__c/fields/Key_Account_this_account_belong_to__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_this_account_belong_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please tell me the name of the Key Account they belong to</inlineHelpText>
    <label>Key Account this account belong to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Feedback Loops (Key Account this account belong to)</relationshipLabel>
    <relationshipName>Data_Feedback_Loops2</relationshipName>
    <type>Lookup</type>
</CustomField>