force-app/main/default/objects/Data_Feedback_Loop__c/fields/Missing_information__c.field-meta.xml
<CustomField>
    <fullName>Missing_information__c</fullName>
    <inlineHelpText>Please explain in as much detail as possible what your data issue is (the more you are able to give, the easier and quicker the issue will be resolved)</inlineHelpText>
    <label>Missing information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>