force-app/main/default/objects/Data_Feedback_Loop__c/fields/Missing_PRISM_Account_and_code__c.field-meta.xml
<CustomField>
    <fullName>Missing_PRISM_Account_and_code__c</fullName>
    <inlineHelpText>Please tell me the PRISM ID and the PRISM account name of the accounts that you are missing</inlineHelpText>
    <label>Missing PRISM Account (and code)</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>