force-app/main/default/objects/Data_Feedback_Loop__c/fields/Parent_Account_this_account_belong_to__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_this_account_belong_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please tell me the Parent Account to which you believe this account belongs</inlineHelpText>
    <label>Parent Account this account belong to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Feedback Loops (Parent Account this account belong to)</relationshipLabel>
    <relationshipName>Data_Feedback_Loops1</relationshipName>
    <type>Lookup</type>
</CustomField>