force-app/main/default/objects/Data_Feedback_Loop__c/fields/Related_CRM_Account_and_code__c.field-meta.xml
<CustomField>
    <fullName>Related_CRM_Account_and_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please tell me the CRM ID and the CRM account name of the account that are not yours</inlineHelpText>
    <label>Related CRM Account (and code)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Feedback Loops</relationshipLabel>
    <relationshipName>Data_Feedback_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>