force-app/main/default/objects/Data_Feedback_Loop__c/fields/Related_ERP_Account_and_code__c.field-meta.xml
<CustomField>
    <fullName>Related_ERP_Account_and_code__c</fullName>
    <inlineHelpText>Please tell me the correct ERP for this record</inlineHelpText>
    <label>Related ERP Account (and code)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>