force-app/main/default/objects/Data_Feedback_Loop__c/fields/Related_PRISM_Account_and_code__c.field-meta.xml
<CustomField>
    <fullName>Related_PRISM_Account_and_code__c</fullName>
    <inlineHelpText>Please tell me the PRISM ID and the PRISM account name of the account that are not yours</inlineHelpText>
    <label>Related PRISM Account (and code)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>