force-app/main/default/objects/Data_Feedback_Loop__c/fields/Related_Sales_Agreement_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Sales_Agreement_Product_Number__c</fullName>
    <inlineHelpText>Please tell me the Sales Agreement Product Number you are referring to</inlineHelpText>
    <label>Related Sales Agreement Product Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>