force-app/main/default/objects/Data_Feedback_Loop__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Waiting For Customer</fullName>
            </value>
            <value>
                <fullName>Closed(Closed)</fullName>
            </value>
            <value>
                <fullName>I do not see all accounts as part of my Key Account Scope</fullName>
                <isActive>false</isActive>
                <label>I do not see all accounts as part of my Key Account Scope</label>
            </value>
            <value>
                <fullName>I do not see all my accounts</fullName>
                <isActive>false</isActive>
                <label>I do not see all my accounts</label>
            </value>
            <value>
                <fullName>I see accounts that are not mine</fullName>
                <isActive>false</isActive>
                <label>I see accounts that are not mine</label>
            </value>
            <value>
                <fullName>Missing / Wrong data in my accounts</fullName>
                <isActive>false</isActive>
                <label>Missing / Wrong data in my accounts</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>The ERP listed on the record is incorrect (P2Q)</fullName>
                <isActive>false</isActive>
                <label>The ERP listed on the record is incorrect (P2Q)</label>
            </value>
            <value>
                <fullName>The customer group/parent account is missing</fullName>
                <isActive>false</isActive>
                <label>The customer group/parent account is missing</label>
            </value>
            <value>
                <fullName>The customer grouping is incorrect</fullName>
                <isActive>false</isActive>
                <label>The customer grouping is incorrect</label>
            </value>
            <value>
                <fullName>Their is a problem with the product information listed on the record (P2Q)</fullName>
                <isActive>false</isActive>
                <label>Their is a problem with the product information listed on the record (P2Q)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>