force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/I_do_not_see_all_my_accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>I_do_not_see_all_my_accounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Issue_Type__c , &quot;I do not see all my accounts&quot;),
    OR(
        ISBLANK( Missing_PRISM_Account_and_code__c ),
         LEN( Extra_information__c )= 0
    )
)</errorConditionFormula>
    <errorMessage>Please Fill in all the mandatory Fields
-Missing Prism Account (and Code)
-Extra Information</errorMessage>
</ValidationRule>