force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/I_see_accounts_that_are_not_mine.validationRule-meta.xml
<ValidationRule>
    <fullName>I_see_accounts_that_are_not_mine</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Issue_Type__c , &quot;I see accounts that are not mine&quot;),
    OR(
        LEN( Extra_information__c )= 0,
        ISBLANK( Related_PRISM_Account_and_code__c ),
        ISBLANK( Related_CRM_Account_and_code__c )
    )
)</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory fields
-Extra Information 
-Related Prism Account (and Code)
-Related CRM Account (and Code)</errorMessage>
</ValidationRule>