force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/Missing_Customer_group_or_parent_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Customer_group_or_parent_account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Issue_Type__c , &quot;The customer group/parent account is missing&quot;),
    OR(
        LEN( Extra_information__c )= 0,
        ISBLANK( Related_PRISM_Account_and_code__c ),
        ISBLANK( Related_CRM_Account_and_code__c ),
        ISBLANK( Parent_Account_this_account_belong_to__c ) 
    )
)</errorConditionFormula>
    <errorMessage>Please Fill in all the Mandatory Fields
-Extra Information
-Related Prism Account (and Code)
-Related CRM Account (and Code)
-Parent Account this account belong to</errorMessage>
</ValidationRule>