force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/Missing_Wrong_data_in_my_accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Wrong_data_in_my_accounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Issue_Type__c , &quot;Missing / Wrong data in my accounts&quot;),
OR(
LEN(  Related_PRISM_Account_and_code__c  )= 0,
ISBLANK( Related_CRM_Account_and_code__c ),
ISBLANK(  Missing_information__c  )
)
)</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory Fields.
-Related PRISM Account (and code)
-Related CRM Account (and code)
-Missing information</errorMessage>
</ValidationRule>