force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Issue_Type__c , &quot;Other&quot;),
OR(
LEN(  Missing_information__c  )= 0

)
)</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory Fields.
-Missing information</errorMessage>
</ValidationRule>