force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/The_Customer_Grouping_is_Incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>The_Customer_Grouping_is_Incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Issue_Type__c , &quot;The customer grouping is incorrect&quot;),
    OR(
        LEN( Extra_information__c )= 0,
        ISBLANK( Related_PRISM_Account_and_code__c ),
        ISBLANK( Related_CRM_Account_and_code__c ),
        ISBLANK( Parent_Account_this_account_belong_to__c )
    )
)</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory Fields.
-Extra Information
-Related Prism Account (and Code)
-Related CRM Account (and Code)
-Parent Account this Account belong to</errorMessage>
</ValidationRule>