force-app/main/default/objects/Data_Feedback_Loop__c/validationRules/The_ERP_listed_on_the_record_is_incorrec.validationRule-meta.xml
<ValidationRule>
    <fullName>The_ERP_listed_on_the_record_is_incorrec</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Issue_Type__c , &quot;The ERP listed on the record is incorrect (P2Q)&quot;),
OR(
LEN( Extra_information__c )= 0,
ISBLANK(  Related_Sales_Agreement_Product_Number__c  ),
ISBLANK(  Related_ERP_Account_and_code__c  )

)
)</errorConditionFormula>
    <errorMessage>Please fill in all the mandatory Fields.
-Extra information
-Related Sales Agreement Product Number
-Related ERP Account (and code)</errorMessage>
</ValidationRule>